--- a/templates/front/users.html.twig
+++ b/templates/front/users.html.twig
@@ -7,14 +7,14 @@
 {% endblock stylesheets %}
 
 {% block metatitle %}
-    Users | Skateboard Social user
+    Utilisateurs | Skateboard Social user
 {% endblock metatitle %}
 
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('users') }}" src="{{ asset('icon/users_titre.png') }}" alt="user"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('users') }}" src="{{ asset('icon/user.png') }}" alt="user-icon"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('front_users') }}" src="{{ asset('icon/club-flou2.png') }}" alt="user"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('front_users') }}" src="{{ asset('icon/login.png') }}" alt="user-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -48,24 +48,24 @@
                 <div class="card-text">
                     <h1>{{ user.title }}</h1>
                     {#  <img src="{{ asset('uploads/cover/'~user.coverFilename) }}" alt=""> #}
-                    <h2>{{ user.description}}</h2>
+                    <h2></h2>
                     <h3>{{ user.town}}</h3>
-                    <h3>{{ user.area}}</h3>
+                    <h3></h3>
                     {#             {% if skatepark.user %} #}
                     {#                        <h3>{{ skatepark.user.town }} {{ skatepark.user.area }}</h3> #}
                     {#                    {% endif %} #}
                     <div class="card-ic">
                         <div id="adm-btn" class="adm-btn">
-                            <div class="ic" ><a id="link1" href="{{ path('profile_user', {"id": user.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir l'utilisateur">
+                            <div class="ic" ><a id="link1" href="{{ path('front_user', {"id": user.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir l'utilisateur">
                                     <br><h4 class="pad5">Voir l'utilisateur</h4></a>
                             </div>
-                            <div class="ic" ><a id="link2" href="{{ path('profile_user_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer u'utilisateur">
+                            <div class="ic" ><a id="link2" href="{{ path('front_user_create') }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer u'utilisateur">
                                     <br><h4 class="pad5">Créer un utilisateur</h4></a>
                             </div>
-                            <div class="ic" ><a id="link3" href="{{ path('profile_user_update', {"id": user.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier l'utilisateur">
+                            <div class="ic" ><a id="link3" href="{{ path('front_user_update', {"id": user.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier l'utilisateur">
                                     <br><h4 class="pad5">Modifier l'utilisateur</h4></a>
                             </div>
-                            <div class="ic" ><a id="link4" href="{{ path('profile_user_delete', {"id": user.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer l'utilisateur">
+                            <div class="ic" ><a id="link4" href="{{ path('front_user_delete', {"id": user.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer l'utilisateur">
                                     <br><h4 class="pad5">Supprimer l'utilisateur</h4></a>
                             </div>
                         </div>
